# tlm

./: .env.example  .gitignore  IDEA.md  README.md  environment.yml  pyproject.toml
configs/: model.local.example.json
docs/: efm.md  giai2-notes.md  terminal_bench.md
examples/: run_scripted_classroom.py
experiments/: EXPERIMENT_LOG.md  STEERING_SCIWORLD_ADJUSTMENT_20260719.md  STEERING_SCIWORLD_APPWORLD_20260719.md
research/: __init__.py
research/efm/: SELFEVOLVE_PLAN.md  __init__.py  constitution.py  models.py  models.py.bak_20260627  policy.py  prompts.py.bak_20260627  prompts.py.bak_guidance_20260629  quality.py  runtime.py  runtime.py.bak_20260627  updater.py  updater.py.bak_20260627
research/efm-archive/: constitution.py.bak_20260627  constitution.py.bak_preopt  policy.py.bak_guidance_20260629  prompts.py
research/efm-archive/bench/: eval.py
research/efm-archive/diagnostics/: efm_eval_v2.py  efm_gate_probe.py  efm_patch2.py  efm_probe_phase2b.py  efm_quality_eval.py  eval_records.json
research/efm-archive/harness/: __init__.py  _client.py  runner.py
research/efm/diagnostics/: efm_integration_patch.py  efm_offline_loop.py  efm_patch.py  efm_quality_audit.py  efm_regen_score.py  harness_smoke.py  repro_policy_proposal.py  test_deterministic_gate.py
research/steering/: ARCHITECTURE.md  CLEANUP_20260721.md  README.md  __init__.py
scripts/: create_env.sh  run_teacher_student_classroom.py  serve_qwen3_32b.sh  start_qwen3_32b.sh  stop_qwen3_32b.sh
src/classroom/: RESEARCH_PLAN.md  __init__.py
tests/: test_teacher_student_classroom.py
(+172 files in other folders)
